--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="shortcut icon" href="./coding.png" type="image/x-icon" />
 
     <title>Yasir-Portfolio</title>
   </head>
